[gd_scene load_steps=2 format=3 uid="uid://d0e2cc72nlueq"]

[ext_resource type="Script" path="res://PauseMenu.gd" id="1_o61t1"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_o61t1")

[node name="Buttons" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -18.0
offset_right = 75.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[node name="ResumeButton" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -61.0
offset_right = 75.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[node name="ExitButton" type="Button" parent="Buttons"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 26.0
offset_right = 75.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit
"
